--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,5 +1,5 @@
 source 'https://github.com/CocoaPods/Specs.git'
-use_frameworks!
+#use_frameworks!
 
 target 'SPMacros_Example', :exclusive => true do
   pod 'SPMacros', :path => '../'
@@ -8,5 +8,4 @@ end
 target 'SPMacros_Tests', :exclusive => true do
   pod 'SPMacros', :path => '../'
 
-  pod 'FBSnapshotTestCase'
 end
